@@ -4,6 +4,10 @@
 
   02 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
   netbeans-6.5_beta.ebuild:
+  Fixed removal of bundled jars
+
+  02 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
+  netbeans-6.5_beta.ebuild:
   Unbundled jars needed for harness cluster
 
   01 Sep 2008; Miroslav Šulc <fordfrog@gentoo.org>
